# vanilla-updater

./: .gitignore  Cargo.toml  LICENSE.md  README.md  cool.txt
.github/workflows/: artifacts.yml
src/: filing.rs  main.rs  verify_studio.rs
